...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.258" />

    <Button
        android:id="@+id/guestSignInButton"
        android:layout_width="171dp"
        android:layout_height="85dp"
        android:onClick="signInAsGuest"
        android:text="Guest Mode "
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.756" />

    <Button
        android:id="@+id/goToAppOnlineButton"
        android:layout_width="172dp"
        android:layout_height="90dp"
        android:onClick="enterMenu"
        android:text="Enter"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
...
